# quazip

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeUserPathsGit.cmake  QuaZip.cmake.in  README-nomacs.md
quazip/: CMakeLists.txt
